test-data/unit/check-flags.test
[case testUnannotatedFunction]
# options: disallow_untyped_defs
def f(x): pass
[out]
main: note: In function "f":
main:2: error: Function is missing a type annotation

[case testUnannotatedArgument]
# options: disallow_untyped_defs
def f(x) -> int: pass
[out]
main: note: In function "f":
main:2: error: Function is missing a type annotation for one or more arguments

[case testNoArgumentFunction]
# options: disallow_untyped_defs
def f() -> int: pass
[out]

[case testUnannotatedReturn]
# options: disallow_untyped_defs
def f(x: int): pass
[out]
main: note: In function "f":
main:2: error: Function is missing a return type annotation

[case testLambda]
# options: disallow_untyped_defs
lambda x: x
[out]

[case testUntypedDef]
# options: disallow_untyped_defs
def f():
    1 + "str"
[out]
main: note: In function "f":
main:2: error: Function is missing a type annotation
